zokrates_cli/examples/compile_errors/out_of_bounds.zok
def main() -> field:
    field[10] a = [0; 10]
    u32 index = if [0f] != [1f] then 1000 else 0 fi
    return a[index]